--- a/Paita2025-2.html
+++ b/Paita2025-2.html
@@ -2,93 +2,113 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Instituto Estaca Paita</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #f3f4f6;
     }
   </style>
 </head>
-<body class="p-4 md:p-8 bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="max-w-6xl w-full space-y-8">
-    <h1 class="text-4xl md:text-5xl font-extrabold text-indigo-700 text-center">¡Inicia el segundo periodo de Institutos!</h1>
-    <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Estaca Paita</h2>
-
-    <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto text-center">
+<body class="bg-gray-100 min-h-screen p-6 flex flex-col items-center">
+  <div class="max-w-4xl w-full text-center mb-10">
+    <h1 class="text-4xl md:text-5xl font-extrabold text-indigo-700 mb-2">¡Inicia el segundo periodo de Institutos!</h1>
+    <h2 class="text-3xl font-bold text-gray-800 mb-4">Estaca Paita</h2>
+    <p class="text-lg text-gray-700 max-w-2xl mx-auto">
       Prepárate para fortalecer tu fe y aprender más sobre el evangelio. Tenemos cursos para todos, impartidos por excelentes maestros. ¡No te lo pierdas!
     </p>
+  </div>
 
+  <div class="grid gap-6 max-w-5xl w-full grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
     <!-- Martes -->
     <div class="bg-white rounded-2xl shadow-xl p-6">
       <h3 class="text-2xl font-bold text-purple-700 mb-4">🟣 Martes</h3>
-      <p><strong>Maestro:</strong> Roger Ramírez Toledo</p>
-      <p><strong>Teléfono:</strong> <a href="https://wa.me/51965379512" target="_blank" class="text-green-600 hover:underline">965379512</a></p>
-      <p><strong>Curso:</strong> Lecciones de Preparación para la Vida</p>
-      <p><strong>Hora:</strong> 7:30 p.m.</p>
-      <p><strong>Lugar:</strong> Capilla Las Begonias</p>
-      <a href="https://myinstitute.churchofjesuschrist.org/signup/1643339" target="_blank" class="btn-inscripcion inline-block mt-3 bg-indigo-600 text-white px-6 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+      <div class="space-y-3 text-sm text-gray-800">
+        <div>
+          <p><strong>Maestro:</strong> Roger Ramírez Toledo</p>
+          <p><strong>Teléfono:</strong> <a href="https://wa.me/51965379512" target="_blank" class="text-green-600 hover:underline">965379512</a></p>
+          <p><strong>Curso:</strong> Lecciones de Preparación para la Vida</p>
+          <p><strong>Hora:</strong> 7:30 p.m.</p>
+          <p><strong>Lugar:</strong> Capilla Las Begonias</p>
+          <a href="https://myinstitute.churchofjesuschrist.org/signup/1643339" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        </div>
+      </div>
     </div>
 
     <!-- Miércoles -->
     <div class="bg-white rounded-2xl shadow-xl p-6">
       <h3 class="text-2xl font-bold text-blue-700 mb-4">🔵 Miércoles</h3>
-      <p><strong>Maestro:</strong> Ángel Landa</p>
-      <p><strong>Teléfono:</strong> <a href="https://wa.me/51923497855" target="_blank" class="text-green-600 hover:underline">923497855</a></p>
-      <p><strong>Curso:</strong> Jesús el Cristo</p>
-      <p><strong>Hora:</strong> 8:00 p.m.</p>
-      <p><strong>Lugar:</strong> Capilla Las Begonias</p>
-      <a href="https://myinstitute.churchofjesuschrist.org/signup/1643464" target="_blank" class="btn-inscripcion inline-block mt-3 bg-indigo-600 text-white px-6 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+      <div class="space-y-3 text-sm text-gray-800">
+        <div>
+          <p><strong>Maestro:</strong> Ángel Landa</p>
+          <p><strong>Teléfono:</strong> <a href="https://wa.me/51923497855" target="_blank" class="text-green-600 hover:underline">923497855</a></p>
+          <p><strong>Curso:</strong> Jesús el Cristo</p>
+          <p><strong>Hora:</strong> 8:00 p.m.</p>
+          <p><strong>Lugar:</strong> Capilla Las Begonias</p>
+          <a href="https://myinstitute.churchofjesuschrist.org/signup/1643464" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        </div>
+      </div>
     </div>
 
     <!-- Jueves -->
     <div class="bg-white rounded-2xl shadow-xl p-6">
-      <h3 class="text-2xl font-bold text-orange-500 mb-4">🟠 Jueves</h3>
-      <p><strong>Maestro:</strong> Camila Carrion</p>
-      <p><strong>Teléfono:</strong> <a href="https://wa.me/51907712504" target="_blank" class="text-green-600 hover:underline">907712504</a></p>
-      <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
-      <p><strong>Hora:</strong> 8:00 p.m.</p>
-      <p><strong>Lugar:</strong> Capilla Puerto Paita</p>
-      <a href="https://myinstitute.churchofjesuschrist.org/signup/1643463" target="_blank" class="btn-inscripcion inline-block mt-3 bg-indigo-600 text-white px-6 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+      <h3 class="text-2xl font-bold text-orange-600 mb-4">🟠 Jueves</h3>
+      <div class="space-y-3 text-sm text-gray-800">
+        <div>
+          <p><strong>Maestro:</strong> Camila Carrion</p>
+          <p><strong>Teléfono:</strong> <a href="https://wa.me/51907712504" target="_blank" class="text-green-600 hover:underline">907712504</a></p>
+          <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
+          <p><strong>Hora:</strong> 8:00 p.m.</p>
+          <p><strong>Lugar:</strong> Capilla Puerto Paita</p>
+          <a href="https://myinstitute.churchofjesuschrist.org/signup/1643463" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        </div>
+      </div>
     </div>
 
     <!-- Viernes -->
     <div class="bg-white rounded-2xl shadow-xl p-6">
-      <h3 class="text-2xl font-bold text-green-600 mb-4">🟢 Viernes</h3>
-      <p><strong>Maestro:</strong> Hno. Paul Martínez</p>
-      <p><strong>Teléfono:</strong> <a href="https://wa.me/51976625229" target="_blank" class="text-green-600 hover:underline">976625229</a></p>
-      <p><strong>Curso:</strong> Preparación Misional</p>
-      <p><strong>Hora:</strong> 8:00 p.m.</p>
-      <p><strong>Lugar:</strong> Capilla Tablazo</p>
-      <a href="https://myinstitute.churchofjesuschrist.org/signup/1643461" target="_blank" class="btn-inscripcion inline-block mt-3 bg-indigo-600 text-white px-6 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+      <h3 class="text-2xl font-bold text-green-700 mb-4">🟢 Viernes</h3>
+      <div class="space-y-3 text-sm text-gray-800">
+        <div>
+          <p><strong>Maestro:</strong> Hno. Paul Martínez</p>
+          <p><strong>Teléfono:</strong> <a href="https://wa.me/51976625229" target="_blank" class="text-green-600 hover:underline">976625229</a></p>
+          <p><strong>Curso:</strong> Preparación Misional</p>
+          <p><strong>Hora:</strong> 8:00 p.m.</p>
+          <p><strong>Lugar:</strong> Capilla Tablazo</p>
+          <a href="https://myinstitute.churchofjesuschrist.org/signup/1643461" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        </div>
+      </div>
     </div>
 
-    <!-- Sábado - Clase 1 -->
+    <!-- Sábado -->
     <div class="bg-white rounded-2xl shadow-xl p-6">
       <h3 class="text-2xl font-bold text-red-600 mb-4">🔴 Sábado</h3>
-      <p><strong>Maestro:</strong> Isac Neyra</p>
-      <p><strong>Teléfono:</strong> <a href="https://wa.me/51920821799" target="_blank" class="text-green-600 hover:underline">920821799</a></p>
-      <p><strong>Curso:</strong> Respondiendo mis preguntas del Evangelio</p>
-      <p><strong>Hora:</strong> 5:00 p.m.</p>
-      <p><strong>Lugar:</strong> Capilla Pueblo Nuevo</p>
-      <a href="https://myinstitute.churchofjesuschrist.org/signup/1643455" target="_blank" class="btn-inscripcion inline-block mt-3 bg-indigo-600 text-white px-6 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
-    </div>
+      <div class="space-y-6 text-sm text-gray-800">
+        <!-- Clase 1 -->
+        <div>
+          <p><strong>Maestro:</strong> Isac Neyra</p>
+          <p><strong>Teléfono:</strong> <a href="https://wa.me/51920821799" target="_blank" class="text-green-600 hover:underline">920821799</a></p>
+          <p><strong>Curso:</strong> Respondiendo mis preguntas del Evangelio</p>
+          <p><strong>Hora:</strong> 5:00 p.m.</p>
+          <p><strong>Lugar:</strong> Capilla Pueblo Nuevo</p>
+          <a href="https://myinstitute.churchofjesuschrist.org/signup/1643455" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        </div>
 
-    <!-- Sábado - Clase 2 -->
-    <div class="bg-white rounded-2xl shadow-xl p-6">
-      <h3 class="text-2xl font-bold text-red-600 mb-4">🔴 Sábado</h3>
-      <p><strong>Maestro:</strong> Elvis Sandoval</p>
-      <p><strong>Teléfono:</strong> <a href="https://wa.me/51924724078" target="_blank" class="text-green-600 hover:underline">924724078</a></p>
-      <p><strong>Curso:</strong> Cortejo y Noviazgo</p>
-      <p><strong>Hora:</strong> 8:00 p.m.</p>
-      <p><strong>Lugar:</strong> Capilla Tablazo</p>
-      <a href="https://myinstitute.churchofjesuschrist.org/signup/1643454" target="_blank" class="btn-inscripcion inline-block mt-3 bg-indigo-600 text-white px-6 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        <!-- Clase 2 -->
+        <div class="pt-4 border-t border-gray-300">
+          <p><strong>Maestro:</strong> Elvis Sandoval</p>
+          <p><strong>Teléfono:</strong> <a href="https://wa.me/51924724078" target="_blank" class="text-green-600 hover:underline">924724078</a></p>
+          <p><strong>Curso:</strong> Cortejo y Noviazgo</p>
+          <p><strong>Hora:</strong> 8:00 p.m.</p>
+          <p><strong>Lugar:</strong> Capilla Tablazo</p>
+          <a href="https://myinstitute.churchofjesuschrist.org/signup/1643454" target="_blank" class="inline-block mt-2 bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold hover:bg-indigo-700">¡Inscríbete!</a>
+        </div>
+      </div>
     </div>
-
-    <p class="text-2xl font-bold text-green-700 text-center mt-10">¡Te esperamos! 🙏</p>
   </div>
+
+  <p class="text-2xl font-bold text-green-700 mt-12">¡Te esperamos! 🙏</p>
 </body>
 </html>
