--- a/Tumbes2025-2.html
+++ b/Tumbes2025-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instituto Estaca Tumbes 2025-2</title>
+    <title>Afiche Instituto Estaca Tumbes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -11,43 +11,81 @@
             font-family: 'Inter', sans-serif;
             background-color: #f3f4f6; /* Fondo gris claro */
         }
-        .afiche-card {
-            background-color: #ffffff;
-            border-radius: 1.5rem; /* rounded-xl */
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* sombra-xl */
-            padding: 2rem;
-            max-width: 90vw; /* Ancho responsivo */
+        .afiche-main-container {
+            max-width: 1200px; /* Ancho máximo para el contenido principal */
             margin: 2rem auto;
+            padding: 1.5rem;
             text-align: center;
         }
-        .day-heading {
+        .afiche-title {
+            font-size: 2.5rem; /* Texto extra grande */
+            font-weight: 800; /* Extra negrita */
+            color: #4f46e5; /* Indigo-700 */
+            margin-bottom: 1.5rem;
+        }
+        .afiche-subtitle {
+            font-size: 2rem; /* Texto grande */
+            font-weight: 700; /* Negrita */
+            color: #1f2937; /* Gris-800 */
+            margin-bottom: 2rem;
+        }
+        .afiche-description {
+            font-size: 1.125rem; /* Texto lg */
+            color: #4b5563; /* Gris-700 */
+            margin-bottom: 2.5rem;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .day-cards-grid-wrapper { /* Nuevo wrapper para el grid de tarjetas de día */
+            display: grid;
+            grid-template-columns: 1fr; /* Por defecto: 1 columna para pantallas pequeñas */
+            gap: 1.5rem; /* Espacio entre tarjetas de día */
+            justify-content: center;
+            align-items: stretch; /* Asegura que las tarjetas tengan la misma altura */
+        }
+        @media (min-width: 768px) { /* Para pantallas medianas (md) */
+            .day-cards-grid-wrapper {
+                grid-template-columns: repeat(2, minmax(0, 1fr)); /* 2 columnas */
+            }
+        }
+        @media (min-width: 1024px) { /* Para pantallas grandes (lg) */
+            .day-cards-grid-wrapper {
+                grid-template-columns: repeat(3, minmax(0, 1fr)); /* 3 columnas */
+            }
+        }
+
+        .day-card { /* Contenedor principal para cada día (la "card" externa) */
+            background-color: #ffffff;
+            border-radius: 1.5rem; /* redondeado XL */
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* Sombra */
+            padding: 1.5rem;
+            /* margin-bottom: 2rem; - Esto se maneja ahora con el 'gap' del grid wrapper */
+            text-align: left;
+            display: flex; /* Para que el contenido interno se distribuya bien */
+            flex-direction: column; /* Contenido en columna */
+        }
+        .day-heading { /* Encabezado del día (ej: "Sábado:") */
             display: flex;
             align-items: center;
-            justify-content: flex-start;
-            margin-top: 1.5rem;
-            margin-bottom: 0.5rem;
-            font-size: 1.5rem; /* texto-2xl */
-            font-weight: 700; /* negrita */
+            margin-bottom: 1.5rem;
+            font-size: 1.5rem; /* Texto 2xl */
+            font-weight: 700; /* Negrita */
             color: #1f2937; /* Gris-900 */
         }
-        .class-item {
-            display: flex;
-            align-items: flex-start;
-            text-align: left;
-            margin-bottom: 1rem;
-            padding-left: 1.5rem; /* pl-6 */
+        .class-section { /* Sección para cada clase dentro de la tarjeta del día */
+            margin-bottom: 1rem; /* Espacio entre clases */
+            padding-bottom: 1rem; /* Espacio debajo de cada sección de clase */
+            border-bottom: 1px dashed #e5e7eb; /* Línea divisoria */
         }
-        .class-icon {
-            font-size: 1.5rem; /* texto-2xl */
-            margin-right: 0.75rem; /* mr-3 */
-            line-height: 1.2;
-        }
-        .class-details {
-            flex-grow: 1;
+        .class-section:last-child {
+            border-bottom: none; /* Eliminar la línea en la última clase del día */
+            padding-bottom: 0;
+            margin-bottom: 0;
         }
         .class-details p {
             margin: 0.25rem 0; /* my-1 */
-            font-size: 1rem; /* texto-base */
+            font-size: 0.95rem; /* Texto sm */
             color: #374151; /* Gris-700 */
         }
         .class-details strong {
@@ -55,137 +93,174 @@
         }
         .btn-inscripcion {
             display: inline-block;
-            background-color: #4f46e5; /* indigo-600 */
+            background-color: #6366f1; /* Indigo-500 */
             color: #ffffff;
             padding: 0.75rem 1.5rem; /* py-3 px-6 */
             border-radius: 0.75rem; /* rounded-xl */
             text-decoration: none;
-            font-weight: 600; /* semibold */
+            font-weight: 600; /* Semibold */
             transition: background-color 0.3s ease;
-            margin-top: 0.5rem;
+            margin-top: 1rem;
+            font-size: 0.95rem;
+            text-align: center;
+            align-self: flex-start; /* Alinea el botón a la izquierda */
         }
         .btn-inscripcion:hover {
-            background-color: #4338ca; /* indigo-700 */
+            background-color: #4f46e5; /* Indigo-600 */
+        }
+        .whatsapp-link {
+            color: #2563eb; /* Azul para enlaces */
+            text-decoration: underline;
+            font-weight: 500;
+        }
+
+        /* Responsive adjustments for smaller screens */
+        @media (max-width: 640px) {
+            .afiche-title {
+                font-size: 2rem;
+            }
+            .afiche-subtitle {
+                font-size: 1.75rem;
+            }
+            .afiche-description {
+                font-size: 1rem;
+            }
+            .day-heading {
+                font-size: 1.25rem;
+            }
+            .class-details p {
+                font-size: 0.875rem;
+            }
+            .btn-inscripcion {
+                padding: 0.6rem 1.2rem;
+                font-size: 0.875rem;
+            }
+            .day-card {
+                padding: 1rem;
+            }
+            .class-section {
+                margin-bottom: 0.75rem;
+                padding-bottom: 0.75rem;
+            }
         }
     </style>
 </head>
-<body class="p-4 md:p-8 bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="afiche-card">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-indigo-700 mb-6">¡Inicia el segundo periodo de Institutos!</h1>
-        <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-8">Estaca Tumbes</h2>
+<body class="bg-gray-100 min-h-screen flex flex-col items-center py-8">
+    <div class="afiche-main-container">
+        <h1 class="afiche-title">¡Inicia el segundo periodo de Institutos!</h1>
+        <h2 class="afiche-subtitle">Estaca Tumbes</h2>
 
-        <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
+        <p class="afiche-description">
             Prepárate para fortalecer tu fe y aprender más sobre el evangelio. Tenemos cursos para todos, impartidos por excelentes maestros. ¡No te lo pierdas!
         </p>
 
-        <div class="space-y-6 text-left">
-            <!-- Clases para Martes -->
-            <div class="day-heading">🟣 Martes:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Yobany Espinoza</p>
-                    <p><strong>Teléfono:</strong> 980607648</p>
-                    <p><strong>Curso:</strong> Fundamentos de la Restauración</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Virtual</p>
+        <div class="day-cards-grid-wrapper">
+            <!-- Contenedor de día: Martes -->
+            <div class="day-card">
+                <div class="day-heading">🟣 Martes:</div>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Yobany Espinoza</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51980607648" target="_blank" class="whatsapp-link">980607648</a></p>
+                        <p><strong>Curso:</strong> Fundamentos de la Restauración</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Virtual</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640787" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
-            </div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Yomar Fox de Vilela</p>
-                    <p><strong>Teléfono:</strong> 957994939</p>
-                    <p><strong>Curso:</strong> Historia de los Santos de los Últimos Días (1815-1846)</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla El Triunfo</p>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Yomar Fox de Vilela</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51957994939" target="_blank" class="whatsapp-link">957994939</a></p>
+                        <p><strong>Curso:</strong> Historia de los Santos de los Últimos Días (1815-1846)</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla El Triunfo</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1642262" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
             </div>
 
-            <!-- Clases para Miércoles -->
-            <div class="day-heading">🔵 Miércoles:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Eduardo Inga</p>
-                    <p><strong>Teléfono:</strong> 995532028</p>
-                    <p><strong>Curso:</strong> Nuevo Testamento (Los Evangelios)</p>
-                    <p><strong>Hora:</strong> 7:30 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla La Cruz</p>
+            <!-- Contenedor de día: Miércoles -->
+            <div class="day-card">
+                <div class="day-heading">🔵 Miércoles:</div>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Eduardo Inga</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51995532028" target="_blank" class="whatsapp-link">995532028</a></p>
+                        <p><strong>Curso:</strong> Nuevo Testamento (Los Evangelios)</p>
+                        <p><strong>Hora:</strong> 7:30 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla La Cruz</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640779" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
-            </div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Kelly Valiente</p>
-                    <p><strong>Teléfono:</strong> 961356580</p>
-                    <p><strong>Curso:</strong> Quiero ser Feliz</p>
-                    <p><strong>Hora:</strong> 7:30 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Pampa Grande</p>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Kelly Valiente</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51961356580" target="_blank" class="whatsapp-link">961356580</a></p>
+                        <p><strong>Curso:</strong> Quiero ser Feliz</p>
+                        <p><strong>Hora:</strong> 7:30 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Pampa Grande</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640785" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
             </div>
 
-            <!-- Clases para Jueves -->
-            <div class="day-heading">🟢 Jueves:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Eduardo Inga</p>
-                    <p><strong>Teléfono:</strong> 995532028</p>
-                    <p><strong>Curso:</strong> Preparación Misional</p>
-                    <p><strong>Hora:</strong> 7:30 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla La Cruz</p>
+            <!-- Contenedor de día: Jueves -->
+            <div class="day-card">
+                <div class="day-heading">🟢 Jueves:</div>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Eduardo Inga</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51995532028" target="_blank" class="whatsapp-link">995532028</a></p>
+                        <p><strong>Curso:</strong> Preparación Misional</p>
+                        <p><strong>Hora:</strong> 7:30 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla La Cruz</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640776" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
-            </div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Efraín Saldarriaga</p>
-                    <p><strong>Teléfono:</strong> 928999085</p>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Efraín Saldarriaga</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51928999085" target="_blank" class="whatsapp-link">928999085</a></p>
                     <p><strong>Curso:</strong> Preparación Misional</p>
                     <p><strong>Hora:</strong> 7:30 p.m.</p>
                     <p><strong>Lugar:</strong> Capilla Pampa Grande</p>
-                    <a href="https://myinstitute.churchofjesuschrist.org/signup/1640783" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
+                <a href="https://myinstitute.churchofjesuschrist.org/signup/1640783" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
             </div>
+        </div>
 
-            <!-- Clases para Sábado -->
-            <div class="day-heading">🔴 Sábado:</div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Aura Vega</p>
-                    <p><strong>Teléfono:</strong> 949059066</p>
-                    <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
-                    <p><strong>Hora:</strong> 7:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Virtual</p>
+            <!-- Contenedor de día: Sábado -->
+            <div class="day-card">
+                <div class="day-heading">🔴 Sábado:</div>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Aura Vega</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51949059066" target="_blank" class="whatsapp-link">949059066</a></p>
+                        <p><strong>Curso:</strong> Jesucristo y el Evangelio Sempiterno</p>
+                        <p><strong>Hora:</strong> 7:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Virtual</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640774" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
-            </div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Jesús Alvarado</p>
-                    <p><strong>Teléfono:</strong> 900729902</p>
-                    <p><strong>Curso:</strong> Preparación Misional</p>
-                    <p><strong>Hora:</strong> 7:30 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Los Ángeles</p>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Jesús Alvarado</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51900729902" target="_blank" class="whatsapp-link">900729902</a></p>
+                        <p><strong>Curso:</strong> Preparación Misional</p>
+                        <p><strong>Hora:</strong> 7:30 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Los Ángeles</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640784" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
-            </div>
-            <div class="class-item">
-                <span class="class-icon">👉</span>
-                <div class="class-details">
-                    <p><strong>Maestro:</strong> Luis Luey</p>
-                    <p><strong>Teléfono:</strong> 998436322</p>
-                    <p><strong>Curso:</strong> El Libro de Isaías</p>
-                    <p><strong>Hora:</strong> 8:00 p.m.</p>
-                    <p><strong>Lugar:</strong> Capilla Los Ángeles</p>
+                <div class="class-section">
+                    <div class="class-details">
+                        <p><strong>Maestro:</strong> Luis Luey</p>
+                        <p><strong>Teléfono:</strong> <a href="https://wa.me/51998436322" target="_blank" class="whatsapp-link">998436322</a></p>
+                        <p><strong>Curso:</strong> El Libro de Isaías</p>
+                        <p><strong>Hora:</strong> 8:00 p.m.</p>
+                        <p><strong>Lugar:</strong> Capilla Los Ángeles</p>
+                    </div>
                     <a href="https://myinstitute.churchofjesuschrist.org/signup/1640786" target="_blank" class="btn-inscripcion">¡Inscríbete!</a>
                 </div>
             </div>
